--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# App temp folder
+temp/
+
+# dotenv environment variables file
+# (REMOVE THIS BEFORE PUBLISH)
+!.env
+
 # Logs
 logs
 *.log
@@ -67,10 +74,6 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
-
-# dotenv environment variables file
-.env
-.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
