--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ HOST = 127.0.0.1
 
 PORT = 3000
 
+DOMAIN = mydomainname.com
 DATABASE = mongodb://localhost:27017/ts-node-web-server
 
 SESSION_EXPIRATION = 3600
