Moved routers into Application directory

--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   "_moduleAliases": {
     "@App": "dist/App",
     "@Database": "dist/Database",
-    "@Models": "dist/Models",
-    "@Routers": "dist/Routers"
+    "@Models": "dist/Models"
   }
 }
