--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Konijima/ts-node-web-server#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -34,9 +35,9 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/socket.io": "^3.0.2",
+    "module-alias": "^2.2.2",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
-    "module-alias": "^2.2.2",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.6.4"
   },
